[Weekly/9/Refactor/Image] 이미지 도메인 리팩터링 (#64)